install python-multipart

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,9 @@ openpyxl
 xlrd
 langchain-community
 langchain-core
+python-multipart
+
+
+
 
 # pip install fastapi uvicorn langchain langchain-community langchain-google-genai python-multipart dotenv
